# PatentBase

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  run.py  start.bat  要件定義.md
backend/app/: main.py
backend/app/api/: analyze_router.py  patents_router.py  reports_router.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  investigation.py  patent.py
backend/app/prompts/: analyze_claims.txt  analyze_key_points.txt  analyze_patent.txt  analyze_summary.txt  summarize_patent.txt
backend/app/services/: ai_analyzer.py  ai_provider.py  claude_code_provider.py  claude_provider.py  document_generator.py  jplatpat_scraper.py  pdf_importer.py  word_importer.py
docs/: PatentBase効率化計画.md  frontend-design.md
docs/superpowers/plans/: 2026-05-11-progressive-analysis.md
docs/superpowers/specs/: 2026-05-11-progressive-analysis-design.md
frontend/static/: app.js  style.css
frontend/templates/: index.html
