[project]
name = "patentbase"
version = "0.1.0"
description = "特許業務効率化 Web アプリ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "playwright>=1.59.0",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
